--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,9 +4,9 @@
 
 :root {
   --background: #ffffff;
-  --secondBackground: #f1dfdf;
-  --shadowColor: #d3b8b8;
-  --hoverColor: #977a7a;
+  --secondBackground: #b1282c;
+  --shadowColor: #9a0f13;
+  --hoverColor: #7e0508;
   --font: Elephant;
 }
 @font-face {
